# DT-flood

./: .gitignore  .pre-commit-config.yaml  .prettierrc.toml  AUTHORS.md  CHANGELOG  CODEOWNERS  CONTRIBUTING.md  COPYRIGHT  Dockerfile  LICENSE  README.md  environment.yml  install.bat  install.sh  lint-changes.sh  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/linters/: .flake8  .markdownlint.json  mlc_config.json
.github/workflows/: check-links.yml  lint.yml
DT_flood/: __init__.py
DT_flood/utils/: __init__.py  data_utils.py  fa_scenario_utils.py  plot_utils.py  ra2ce_utils.py  setup_ra2ce.py  sfincs_utils.py  workflow_utils.py
DT_flood/utils/plotting/: __init__.py  fiat.py  map_utils.py  ra2ce.py  sfincs.py  sfincs_styling.py  wflow.py
DT_flood/workflows/: __init__.py  run_fa_scenario.cwl  run_fa_scenario_config.yml
DT_flood/workflows/cwl/: collect_in_dir.cwl  construct_output.cwl  fa_fiat_workflow.cwl  fa_ra2ce_workflow.cwl  fa_sfincs_workflow_docker.cwl  fa_wflow_workflow.cwl  init_fa_scenario.cwl  init_scenario.cwl  oscar.cwl  postprocess_fiat.cwl  postprocess_sfincs.cwl  ra2ce_workflow_config.yml  run_fiat.cwl  run_ra2ce.cwl  run_ra2ce_args.yml  run_sfincs.cwl  run_sfincs_docker.cwl  run_wflow.cwl  update_fiat.cwl  update_ra2ce.cwl  update_ra2ce_args.yml  update_sfincs.cwl  update_wflow_event.cwl  update_wflow_warmup.cwl  update_wflow_warump.cwl
DT_flood/workflows/cwl_OSCAR/: workflow-minio.cwl  workflow.cwl  workflow.yaml  workflow_config.yaml
DT_flood/workflows/mwe/: init_scenario.cwl  mc_cp.cwl  mwe_workflow.cwl  mwe_workflow_config.yml  run_wflow.cwl  update_wflow.cwl
FloodAdapt_database/Humber/: FloodAdapt_Humber_catalog.yml  HumberDelta_ObsLine.geojson  HumberDelta_ObsPoints.geojson  HumberDelta_large.geojson  wflow_build.ini
Notebooks/: ConfigureFullScenario.ipynb  LaunchWorkflow.ipynb  RunScenario.ipynb  SetupEvent.ipynb  SetupFIAT.ipynb  SetupMeasure.ipynb  SetupMetricsConfig.ipynb  SetupProjection.ipynb  SetupRA2CE.ipynb  SetupSFINCS.ipynb  SetupScenario.ipynb  SetupSite.ipynb  SetupStrategy.ipynb  SetupWFlow.ipynb  VisualizeScenario.ipynb  cwl_config_test_scenario.yml  fetch_dt-climate-data.ipynb  sketch_scenario_generation.ipynb  template.yml
Notebooks/[old]/: LaunchWorkflow.ipynb  RunScenario.ipynb  SetupEvent.ipynb  SetupMeasure.ipynb  SetupMetricsConfig.ipynb  SetupProjection.ipynb  SetupScenario.ipynb  SetupStrategy.ipynb
Notebooks/solara/: IRISCC_solara_widget.ipynb  solara_widget.ipynb  solara_widget.py  test_solara_config_v1.ipynb  test_solara_config_v2.ipynb  test_solara_v1.ipynb  test_solara_v1.py
Notebooks/utils/: fa_scenario_utils.py  plot_utils.py
OSCAR_flow/: workflow-minio.cwl  workflow.yaml
OSCAR_flow/upload/: upload.cwl  upload.py
SFINCS_GFM/: .gitignore  environment.yml  gfm_local_dask.py  gfm_local_dask_fromfile.py  gfm_remote_dask.py  gfm_sfincs_comparison.py  make_model_meas_wl.ipynb  plot_results.ipynb  pyproject.toml
SFINCS_GFM/examples/baltic/: create_sfincs.ipynb  run_breach_scenarios.ipynb
SFINCS_GFM/sfincs_gfm/: __init__.py
SFINCS_GFM/sfincs_gfm/methods/: __init__.py  breach_dikes.py  comparison_sfincs_gfm.py  gfm.py  run_oscar.py  set_forcing.py  update_forcing  utils.py  utils_oscar.py
running_the_notebooks/: SetupFIAT (1).md  SetupFIAT.html  SetupFIAT.md
workflows/: run_fa_scenario.cwl  run_fa_scenario_config.yml
workflows/cwl/: collect_in_dir.cwl  fa_sfincs_workflow.cwl  fa_sfincs_workflow_docker.cwl  fa_wflow_workflow.cwl  init_fa_scenario.cwl  run_fiat.cwl  run_sfincs_docker.cwl  run_sfincs_docker_config.yml  run_sfincs_docker_workflow.cwl  run_sfincs_singularity.cwl  run_wflow.cwl  run_wflow_docker.cwl  run_wflow_docker_config.yml  run_wflow_singularity.cwl  update_sfincs.cwl  update_wflow_warump.cwl
workflows/pyscripts/: init_fa_database.py  run_wflow.py  update_fiat.py  update_wflow.py  update_wflow_event.py  update_wflow_warmup.py
(+98 files in other folders)
