[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "DT-flood"
version = "0.1"
requires-python = ">=3.10"
authors = [
    {name = "Willem Tromp", email = "willem.tromp@deltares.nl"},
]
description = "Digital Twin for flooding developed for the InterTwin project"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "cartopy",
    "cwltool ; platform_system != 'Windows'",
    "delft_fiat==0.1.1",
    "ipykernel",
    "hydromt",
    "hydromt_wflow>=0.6,<0.7",
    "pandas<2.0.0",
    "pip>=23.1.2"
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.dependencies]
cartopy = "*"
delft_fiat = "0.1.1"
ipykernel = "*"
hydromt = ">=0.9, <0.10"
hydromt_wflow = ">=0.6,<0.7"
lxml = ">=4.6,<5.0"
pandas = "<2.0.0"

[tool.pixi.target.linux-64.dependencies]
cwltool = "*"

[tool.pixi.pypi-dependencies]
dfm-tools = "*"
earthkit = "*"
jupyter = "*"
gwwapi = "*"
solara = "*"
ipyleaflet = "*"
mapbox-earcut = "*"
hydromt-sfincs = {git = "https://github.com/Deltares-research/hydromt_sfincs_insiders.git", branch="FA_quadtree"}
deltares-coastalhazardstoolkit = { git = "https://github.com/Deltares-research/CoastalHazardsToolkit.git" }
cht-cyclones = {git = "https://github.com/deltares/cht_cyclones.git"}
cht-observations = {git = "https://github.com/deltares/cht_observations.git"}
hydromt-fiat = {git  = "https://github.com/deltares/hydromt_fiat.git"}
DT_flood = { path = ".", editable = true }