[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "DT-flood"
version = "0.1"
requires-python = ">=3.10"
authors = [
    {name = "Willem Tromp", email = "willem.tromp@deltares.nl"},
]
description = "Digital Twin for flooding developed for the InterTwin project"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = []


[tool.ruff]
line-length = 88
target-version = "py311"

# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT), bugbear (B)
select = ["E", "F", "I", "PT", "D", "B"]
ignore-init-module-imports = true
ignore = ["D211", "D213", 'D206', 'E501', "E741", "D105", "E712", "B904", "B905"]

[tool.ruff.pydocstyle]
convention = "numpy"
