[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sfincs_gfm"
authors = [
    { name = "Gundula Winter", email = "gundula.winter@deltares.nl"},
    { name = "Willem Tromp", email = "willem.tromp@deltares.nl"},
]

dependencies = []

requires-python = "==3.10"
readme = "README.md"
dynamic = ["version", "description"]